feat: home screen redesign
